--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -11,3 +11,108 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+main{
+  min-height: 85vh;
+}
+
+.pages{
+  margin-top: 25px;
+}
+
+.carousel-item-next,
+.carousel-item-prev,
+.carousel-item.active {
+  display: flex;
+}
+.carousel-caption {
+  position: absolute;
+  top: 0;
+}
+
+.carousel-caption h2 {
+  color: #fff;
+}
+
+.carro{
+  margin-bottom: 50px;
+}
+
+.vol{
+  margin-top: 20px;
+  margin-bottom: 10px;
+}
+
+.carousel img {
+  height: 300px;
+  padding: 30px;
+  margin: 40px;
+  width: 500px;
+  border-radius: 15%;
+  margin-left: auto;
+  margin-right: auto;
+}
+.carousel a {
+  margin: 0 auto;
+}
+@media (max-width: 900px) {
+  .carousel-caption h2 {
+    font-size: 2.5vw;
+  }
+}
+.search{
+  margin-right: 12px;
+}
+
+.conhead{
+  padding: 15px;
+}
+
+.rating span{
+  margin: 0.05rem;
+}
+
+h3{
+  text-align: center;
+  margin-top: 0.4rem;
+}
+
+h1{
+  font-size: 1.8rem;
+  padding: 1rem 0;
+}
+
+h2{
+  font-size: 1.4rem;
+  padding: 0.5rem 0;
+}
+
+.tam{
+  font-family: sf pro text,-apple-system,BlinkMacSystemFont,Roboto,segoe ui,Helvetica,Arial,sans-serif,apple color emoji,segoe ui emoji,segoe ui symbol;
+  font-weight: 400;
+  line-height: 1.4;
+  font-size: 1rem;
+}
+
+.tam:hover{
+background-color: rgb(238, 237, 237);
+color: #1b1b1b;
+}
+
+.back{
+  margin-bottom: 10px;
+}
+
+#Continue{
+  background-color: rgb(65, 65, 65);
+  margin-top: 15px;
+  float: right;
+}
+
+.verde{
+  color: rgb(19, 197, 93);
+}
+
+.titulo-orden{
+font-size: 15px;
+}
